; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_relcache.c_RelationIdGetRelation.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_relcache.c_RelationIdGetRelation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i64, i64, %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i64 }

@RELKIND_INDEX = common dso_local global i64 0, align 8
@RELKIND_PARTITIONED_INDEX = common dso_local global i64 0, align 8
@criticalRelcachesBuilt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_11__* @RelationIdGetRelation(i32 %0) #0 {
  %2 = alloca %struct.TYPE_11__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_11__*, align 8
  store i32 %0, i32* %3, align 4
  %5 = call i32 (...) @IsTransactionState()
  %6 = call i32 @Assert(i32 %5)
  %7 = load i32, i32* %3, align 4
  %8 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %9 = call i32 @RelationIdCacheLookup(i32 %7, %struct.TYPE_11__* %8)
  %10 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %11 = call i64 @RelationIsValid(%struct.TYPE_11__* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %64

13:                                               ; preds = %1
  %14 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %15 = call i32 @RelationIncrementReferenceCount(%struct.TYPE_11__* %14)
  %16 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %62, label %20

20:                                               ; preds = %13
  %21 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %21, i32 0, i32 2
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @RELKIND_INDEX, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %36, label %28

28:                                               ; preds = %20
  %29 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %29, i32 0, i32 2
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @RELKIND_PARTITIONED_INDEX, align 8
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %36, label %39

36:                                               ; preds = %28, %20
  %37 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %38 = call i32 @RelationReloadIndexInfo(%struct.TYPE_11__* %37)
  br label %42

39:                                               ; preds = %28
  %40 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %41 = call i32 @RelationClearRelation(%struct.TYPE_11__* %40, i32 1)
  br label %42

42:                                               ; preds = %39, %36
  %43 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %44 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %43, i32 0, i32 1
  %45 = load i64, i64* %44, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %58, label %47

47:                                               ; preds = %42
  %48 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %49 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %48, i32 0, i32 0
  %50 = load i64, i64* %49, align 8
  %51 = icmp ne i64 %50, 0
  br i1 %51, label %52, label %56

52:                                               ; preds = %47
  %53 = load i32, i32* @criticalRelcachesBuilt, align 4
  %54 = icmp ne i32 %53, 0
  %55 = xor i1 %54, true
  br label %56

56:                                               ; preds = %52, %47
  %57 = phi i1 [ false, %47 ], [ %55, %52 ]
  br label %58

58:                                               ; preds = %56, %42
  %59 = phi i1 [ true, %42 ], [ %57, %56 ]
  %60 = zext i1 %59 to i32
  %61 = call i32 @Assert(i32 %60)
  br label %62

62:                                               ; preds = %58, %13
  %63 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  store %struct.TYPE_11__* %63, %struct.TYPE_11__** %2, align 8
  br label %75

64:                                               ; preds = %1
  %65 = load i32, i32* %3, align 4
  %66 = call %struct.TYPE_11__* @RelationBuildDesc(i32 %65, i32 1)
  store %struct.TYPE_11__* %66, %struct.TYPE_11__** %4, align 8
  %67 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %68 = call i64 @RelationIsValid(%struct.TYPE_11__* %67)
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %73

70:                                               ; preds = %64
  %71 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %72 = call i32 @RelationIncrementReferenceCount(%struct.TYPE_11__* %71)
  br label %73

73:                                               ; preds = %70, %64
  %74 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  store %struct.TYPE_11__* %74, %struct.TYPE_11__** %2, align 8
  br label %75

75:                                               ; preds = %73, %62
  %76 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  ret %struct.TYPE_11__* %76
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @IsTransactionState(...) #1

declare dso_local i32 @RelationIdCacheLookup(i32, %struct.TYPE_11__*) #1

declare dso_local i64 @RelationIsValid(%struct.TYPE_11__*) #1

declare dso_local i32 @RelationIncrementReferenceCount(%struct.TYPE_11__*) #1

declare dso_local i32 @RelationReloadIndexInfo(%struct.TYPE_11__*) #1

declare dso_local i32 @RelationClearRelation(%struct.TYPE_11__*, i32) #1

declare dso_local %struct.TYPE_11__* @RelationBuildDesc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
